--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2007-09-20  Olav Vitters  <olav@bkor.dhs.org>
 
+	* www/new_user.php: Fix annoying bug where new_user.php wouldn't
+	remember the existing SSH keys. This could happen if e.g. there was an
+	error shown and you tried to create the account again.
+
+2007-09-20  Olav Vitters  <olav@bkor.dhs.org>
+
 	* lib/account.php (validate): Check if email address hasn't been used
 	by an existing account in LDAP.
 	* lib/user.php (fetchuser): Allow it to fetch a user by any LDAP
