Fix typo, causing the email address not to be checked properly (oops).
	* lib/account.php: Fix typo, causing the email address not to be
	checked properly (oops).


svn path=/trunk/; revision=93

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2007-09-21  Olav Vitters  <olav@bkor.dhs.org>
 
+	* lib/account.php: Fix typo, causing the email address not to be
+	checked properly (oops).
+
+2007-09-21  Olav Vitters  <olav@bkor.dhs.org>
+
 	* lib/user.php: Fix regression: Allowing to search by any attribute
 	caused the groups to always appear as empty, due to wrong variable
 	usage.
