--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-09-22  Olav Vitters  <olav@bkor.dhs.org>
+
+	* docs/ldif/ou.ldif: Add required groups to the example LDIF file.
+	Without these groups Mango will not function correctly.
+
 2007-09-21  Olav Vitters  <olav@bkor.dhs.org>
 
 	* lib/account.php: Validate SSH keys
