--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-10-23  Olav Vitters  <olav@bkor.dhs.org>
+
+	* www/index.xsl: Use correct attribute for the email address.
+
 2007-10-20  Olav Vitters  <olav@bkor.dhs.org>
 
 	* lib/account.php: Ensure multiple maintainers will be emailed.
